:bug: Fix phone overflow

--- a/wp-content/themes/museedesnuages/src/scss/layouts/_path.scss
+++ b/wp-content/themes/museedesnuages/src/scss/layouts/_path.scss
@@ -1,5 +1,6 @@
 .path {
     position: relative;
+    overflow: hidden;
     height: calc(10027px + 500px);
     z-index: 5;
 
